# LibraryFund

./: .gitignore  README.md
client/library-fund-client/: package-lock.json  package.json
library-client-app/: package-lock.json  package.json
library-client-app/src/: App.tsx  index.tsx
library-client-app/src/components/: NavBar.tsx  ReaderRetireeEditForm.tsx  ReaderSchoolboyEditForm.tsx  ReaderScientistEditForm.tsx  ReaderStudentEditForm.tsx  ReaderTeacherEditForm.tsx  ReaderWorkerEditForm.tsx
library-client-app/src/hooks/: readers.ts  useRetirees.ts  useTeachers.ts  (+3 more)
library-server-app/: pyproject.toml
library-server-app/app/domain/models/: reader.py
library-server-app/src/: main.py
library-server-app/src/app/api/: librarians.py  literature.py  reader.py  readers.py
library-server-app/src/app/application/services/: reader_service.py
library-server-app/src/app/db/: db.py
library-server-app/src/app/domain/models/: __init__.py  reader.py  retiree.py  schoolboy.py  scientist.py  student.py  teaher.py  worker_reader.py
library-server-app/src/app/domain/models/copy/: copy.py
library-server-app/src/app/domain/models/edition/: edition.py  edition_inventory.py
library-server-app/src/app/domain/models/librarian/: librarian.py  librarian_production.py
library-server-app/src/app/domain/models/work/: work_loancount.py
library-server-app/src/app/domain/views/: ReaderEdition.py
library-server-app/src/app/infrastructure/repositories/: librarian_repo.py  libraryfund_repo.py  literature_repo.py  reader_repo.py
library-server-app/src/tests/: test_readers.py
(+14 files in other folders)
